Closed
Bug 748090
Opened 13 years ago
Closed 13 years ago
pop3 filters that move new message to imap folders mostly won't work
Categories
(MailNews Core :: Filters, defect)
Tracking
(thunderbird12 fixed, thunderbird13 fixed, thunderbird14 fixed)
RESOLVED
FIXED
Thunderbird 15.0
People
(Reporter: Bienvenu, Assigned: Bienvenu)
References
Details
(Keywords: regression, Whiteboard: [fixed in 12.0.1])
Attachments
(1 file)
|
1.86 KB,
patch
|
standard8
:
review+
standard8
:
approval-comm-aurora+
standard8
:
approval-comm-beta+
standard8
:
approval-comm-release+
|
Details | Diff | Splinter Review |
pop3 incoming mail filters that move messages to imap folders mostly won't work. This is a regression from the pluggable store work. Prior to pluggable stores, we used a single new mail parser for all the messages in a pop3 download session. The moves to imap folders were coalesced by a imap move coalescer owned by the parser. Now, we use one new mail parser per message, which means the imap move coalescing doesn't work, except if the filter happens to apply to the last message downloaded in a download session.
| Assignee | ||
Comment 1•13 years ago
|
||
The relnote would be
pop3 filters that move/copy incoming messages to imap folders will not work, for the most part, except for the last message downloaded in get new mail operation. For this reason, it is probably best to disable such filters until this bug is fixed. Filters that are run manually should work.
Keywords: relnote
| Assignee | ||
Comment 2•13 years ago
|
||
sadly, there's no way to do an automated test for this, so we'd have to fallback onto a litmus test.
Flags: in-litmus?
Comment 3•13 years ago
|
||
should this not block bug 402392, rather than be blocked by bug 402392?
Keywords: regression
| Assignee | ||
Comment 4•13 years ago
|
||
(In reply to Wayne Mery (:wsmwk) from comment #3)
> should this not block bug 402392, rather than be blocked by bug 402392?
yeah, sorry, forgot to switch that.
| Assignee | ||
Comment 5•13 years ago
|
||
This should fix it...
Updated•13 years ago
|
Flags: in-litmus? → in-litmus?(ludovic)
| Assignee | ||
Comment 6•13 years ago
|
||
Comment on attachment 617740 [details] [diff] [review]
proposed fix
this makes pop3 to imap filters work for me, and xpcshell tests all still pass.
Attachment #617740 -
Flags: review?(mbanner)
Updated•13 years ago
|
Attachment #617740 -
Flags: review?(mbanner) → review+
Comment 7•13 years ago
|
||
Comment on attachment 617740 [details] [diff] [review]
proposed fix
[Triage Comment]
a=me for landing regression fix on branches.
Attachment #617740 -
Flags: approval-comm-release+
Attachment #617740 -
Flags: approval-comm-beta+
Attachment #617740 -
Flags: approval-comm-aurora+
Comment 8•13 years ago
|
||
Checked in:
https://hg.mozilla.org/comm-central/rev/2b4524d258f3
https://hg.mozilla.org/releases/comm-aurora/rev/2eef53f31fcf
https://hg.mozilla.org/releases/comm-beta/rev/9d82860ddf8d
https://hg.mozilla.org/releases/comm-release/rev/53fd7df65dba
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
status-thunderbird12:
--- → fixed
status-thunderbird13:
--- → fixed
status-thunderbird14:
--- → fixed
Resolution: --- → FIXED
Whiteboard: [fixed in 12.0.1]
Target Milestone: --- → Thunderbird 15.0
Comment 9•13 years ago
|
||
We relnoted this for 12.0 and its fixed in 12.0.1 & later so no need for relnote anymore.
Keywords: relnote
Updated•12 years ago
|
Flags: in-litmus?(ludovic)
You need to log in
before you can comment on or make changes to this bug.
Description
•