Bug 748090 - pop3 filters that move new message to imap folders mostly won't work. r+a=Standard8 for CLOSED TREE